Track 2 files into repository.
- modified assets/apic-doc-style.css
- modified gulpfile.js

Auto commit by GitBook Editor

--- a/assets/apic-doc-style.css
+++ b/assets/apic-doc-style.css
@@ -19,3 +19,8 @@
     color: #c7254e;
     background-color: #F9F2F7;
 }
+.home-icon{
+    float: right;
+    margin: 10px;
+    font-size: 28px;
+}
